snapshots/syntax/statements/declarations/variables/dim_static_declaration.snap
---
source: src/syntax/statements/declarations/mod.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: DimStatement
      children:
        - kind: StaticKeyword
          text: Static
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: counter
        - kind: Whitespace
          text: " "
        - kind: AsKeyword
          text: As
        - kind: Whitespace
          text: " "
        - kind: LongKeyword
          text: Long
        - kind: Newline
          text: "\n"
